--- a/i3/config
+++ b/i3/config
@@ -40,10 +40,14 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
+# start applications
 bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+f exec firefox
+bindsym $mod+Shift+d exec discord
+bindsym Print exec "flameshot gui"
 
 # kill focused window
+bindsym $mod+q kill
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
