--- a/i3/i3status.conf.desktop
+++ b/i3/i3status.conf.desktop
@@ -8,20 +8,20 @@
 
 general {
         colors = true
-        interval = 5
+        interval = 1
 }
 
-order += "ipv6"
-order += "wireless _first_"
+order += "wireless tun0"
 order += "ethernet _first_"
 order += "disk /"
 order += "cpu_usage"
 order += "memory"
+order += "volume master"
 order += "tztime local"
 
-wireless _first_ {
-        format_up = "Wireless: (%quality at %essid) %ip"
-        format_down = "Wireless: down"
+ethernet tun0 {
+	format_up = "VPN: %ip (%speed)"
+	format_down = "VPN: down"
 }
 
 ethernet _first_ {
@@ -30,7 +30,7 @@ ethernet _first_ {
 }
 
 disk "/" {
-        format = "HDD: %avail"
+        format = "HDD: %avail free, %used used"
 }
 
 cpu_usage {
@@ -38,9 +38,16 @@ cpu_usage {
 }
 
 memory {
-        format = "Memory: %used Used, %available Available"
+        format = "Memory: %used used, %available free"
         threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+}
+
+volume master {
+	format = " %volume"
+   format_muted = " %volume"
+   device = "default"
+   mixer = "Master"
+   mixer_idx = 0
 }
 
 tztime local {
