--- a/i3/config
+++ b/i3/config
@@ -42,7 +42,7 @@ floating_modifier $mod
 
 # start applications
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Shift+f exec firefox
+bindsym $mod+Shift+f exec chromium
 bindsym $mod+Shift+d exec discord
 bindsym Print exec "flameshot gui"
 
