--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -58,13 +58,12 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
+tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
+wm-restack = i3
+;override-redirect = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -148,8 +147,8 @@ label-full = %percentage%%
 label-charging = %percentage%% %time%
 label-discharging = %percentage%% %time%
 
-format-full-prefix = "BAT "
-format-charging-prefix = "BAT "
+format-full-prefix = "FULL "
+format-charging-prefix = "CHR "
 format-discharging-prefix = "BAT "
 format-full-prefix-foreground = ${colors.primary}
 format-charging-prefix-foreground = ${colors.primary}
