--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -51,7 +51,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio memory cpu battery wlan eth date
+modules-right = filesystem brightness pulseaudio memory cpu battery wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -90,7 +90,7 @@ label = %title:0:60:...%
 
 [module/filesystem]
 type = internal/fs
-interval = 25
+interval = 10
 
 mount-0 = /
 
@@ -110,6 +110,16 @@ label-volume = %percentage%%
 
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
+
+[module/brightness]
+type = internal/backlight
+card = amdgpu_bl0
+
+format-prefix = "BRI "
+format-prefix-foreground = ${colors.primary}
+format = <label>
+
+label = %percentage%%
 
 [module/memory]
 type = internal/memory
