Updated config changes

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,6 +26,7 @@ alert = #A54242
 disabled = #707880
 
 [bar/example]
+monitor = ${env:MONITOR}
 width = 100%
 height = 24pt
 radius = 6
@@ -51,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem brightness pulseaudio memory cpu battery wlan eth date
+modules-right = filesystem brightness pulseaudio memory cpu battery network date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -86,7 +87,7 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:30:...%
 
 [module/filesystem]
 type = internal/fs
@@ -113,7 +114,7 @@ label-muted-foreground = ${colors.disabled}
 
 [module/brightness]
 type = internal/backlight
-card = amdgpu_bl0
+card = intel_backlight
 
 format-prefix = "BRI "
 format-prefix-foreground = ${colors.primary}
@@ -136,14 +137,15 @@ format-prefix-foreground = ${colors.primary}
 format = <label> <ramp-coreload>
 label = %percentage%% - 
 
-ramp-coreload-0 = ▁
-ramp-coreload-1 = ▂
-ramp-coreload-2 = ▃
-ramp-coreload-3 = ▄
-ramp-coreload-4 = ▅
-ramp-coreload-5 = ▆
-ramp-coreload-6 = ▇
-ramp-coreload-7 = █
+ramp-coreload-0 = " "
+ramp-coreload-1 = ▁
+ramp-coreload-2 = ▂
+ramp-coreload-3 = ▃
+ramp-coreload-4 = ▄
+ramp-coreload-5 = ▅
+ramp-coreload-6 = ▆
+ramp-coreload-7 = ▇
+ramp-coreload-8 = █
 ramp-coreload-spacing = 0
 
 [module/battery]
@@ -165,22 +167,15 @@ format-charging-prefix-foreground = ${colors.primary}
 format-discharging-prefix-foreground = ${colors.primary}
 
 
-[network-base]
+[module/network]
 type = internal/network
+interface-type = wireless
 interval = 5
+
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#0000FF}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
 label-connected = %{F#0000FF}%ifname%%{F-} %essid% %local_ip%
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#0000FF}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
