Added a few more changes

--- a/i3/config
+++ b/i3/config
@@ -1,5 +1,4 @@
-# Set mod key to Alt
-set $mod Mod1
+set $mod Mod4
 
 # Set font
 font pango:monospace 8
@@ -154,8 +153,8 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Brightness keys setup
-bindsym XF86MonBrightnessDown exec --no-startup-id "xbacklight -dec 5"
-bindsym XF86MonBrightnessUp exec --no-startup-id "xbacklight -inc 5"
+bindsym XF86MonBrightnessDown exec --no-startup-id "brightnessctl set 5%-"
+bindsym XF86MonBrightnessUp exec --no-startup-id "brightnessctl set +5%"
 
 # Window Cosmetic Changes
 gaps inner 10
@@ -165,6 +164,7 @@ client.focused_inactive #333333 #222222 #888888 #292d2e #eeeeee
 client.unfocused #333333 #222222 #888888 #292d2e #eeeeee
 
 # Startup Applications
+exec --no-startup-id "$HOME/.screenlayout/layout.sh"
 exec --no-startup-id "xmodmap $HOME/.Xmodmap"
 exec --no-startup-id "polybar"
 exec --no-startup-id "lxpolkit &"
