--- a/i3/config
+++ b/i3/config
@@ -18,7 +18,7 @@ floating_modifier $mod
 
 # Application hot keys
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Shift+f exec google-chrome
+bindsym $mod+Shift+f exec microsoft-edge-dev
 bindsym $mod+Shift+d exec discord
 bindsym Print exec "flameshot gui"
 
@@ -172,3 +172,4 @@ exec --no-startup-id "lxpolkit &"
 # Tweak keyboard and trackpad
 exec --no-startup-id "synclient VertEdgeScroll=1 VertScrollDelta=-111"
 exec --no-startup-id "setxkbmap -option caps:escape"
+exec --no-startup-id "nitrogen --restore &"
