Added TPM to tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,8 @@ set-option -g prefix C-w
 bind-key C-w send-prefix
 
 # Vim window split commands
-bind v split-window -h
-bind s split-window -v
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
@@ -37,3 +37,16 @@ unbind x
 
 # Disable auto renaming panes
 set -g allow-rename off
+
+# Tmux Plugin Manager (TPM)
+# To install plugins open tmux and type Prefix+I
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'erikw/tmux-powerline'
+
+# Install tmux themes
+set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_theme 'snow'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
