--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -3,15 +3,18 @@ Host imap.gmail.com
 User jadenprovost@gmail.com
 PassCmd "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.passwords/gmail.gpg"
 SSLType IMAPS
-CertificateFile /etc/ssl/certs/ca-certificates.crt
+SSLVersions TLSv1.2
+AuthMechs PLAIN
+SystemCertificates no
+CertificateFile ~/.mail/certificates/ca-certificates.pem
 
 IMAPStore gmail-remote
 Account gmail
 
 MaildirStore gmail-local
 Subfolders Verbatim
-Path ~/Mail/
-Inbox ~/Mail/Inbox
+Path ~/.mail/
+Inbox ~/.mail/Inbox
 
 Channel gmail
 Far :gmail-remote:
