--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,8 +3,10 @@ set $mod Mod4
 # Set font
 font pango:monospace 8
 
-# Init i3 lock
+# Init i3 lock and enable autolock
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xset dpms 600
+exec --no-startup-id xautolock -time 10 -locker i3lock
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
