--- a/.config/i3/config
+++ b/.config/i3/config
@@ -167,12 +167,9 @@ client.focused_inactive #333333 #222222 #888888 #292d2e #eeeeee
 client.unfocused #333333 #222222 #888888 #292d2e #eeeeee
 
 # Startup Applications
-exec --no-startup-id "$HOME/.screenlayout/launch.sh"
-exec --no-startup-id "xmodmap $HOME/.Xmodmap"
-exec --no-startup-id "polybar"
-exec --no-startup-id "lxpolkit &"
-exec --no-startup-id "dex -a"
-
-# Tweak keyboard and trackpad
-exec --no-startup-id "synclient VertEdgeScroll=1 VertScrollDelta=-111"
-exec --no-startup-id "setxkbmap -option caps:escape"
+exec --no-startup-id "$HOME/.screenlayout/launch.sh" # load xrandr screen layout
+exec --no-startup-id "xmodmap $HOME/.Xmodmap" # update capslock key
+exec --no-startup-id "lxpolkit &" # start authentication agent (prompt)
+exec --no-startup-id "xcompmgr &" # startup composition manager (transparency)
+exec --no-startup-id "polybar" # status bar
+exec --no-startup-id "dex -a" # run autostart desktop apps
