--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -1,7 +1,7 @@
 IMAPAccount gmail
 Host imap.gmail.com
 User jadenprovost@gmail.com
-PassCmd "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.passwords/gmail.gpg"
+PassCmd "pass emacs/gmail"
 SSLType IMAPS
 SSLVersions TLSv1.2
 AuthMechs PLAIN
