--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -52,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem brightness pulseaudio memory cpu battery network date
+modules-right = filesystem brightness alsa memory cpu battery network date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -100,8 +100,8 @@ label-mounted = %{F#0000FF}%mountpoint%%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
-[module/pulseaudio]
-type = internal/pulseaudio
+[module/alsa]
+type = internal/alsa
 
 format-volume-prefix = "VOL "
 format-volume-prefix-foreground = ${colors.primary}
