--- a/.config/i3/config
+++ b/.config/i3/config
@@ -154,8 +154,8 @@ bindsym l resize shrink width 10 px or 10 ppt
 bindsym $mod+r mode "resize"
 
 # Brightness keys setup
-bindsym XF86MonBrightnessDown exec --no-startup-id "sudo $HOME/.config/i3/brightness.sh -5"
-bindsym XF86MonBrightnessUp exec --no-startup-id "sudo $HOME/.config/i3/brightness.sh 5"
+bindsym XF86MonBrightnessDown exec --no-startup-id "sudo $HOME/.scripts/brightness.sh -5"
+bindsym XF86MonBrightnessUp exec --no-startup-id "sudo $HOME/.scripts/brightness.sh 5"
 
 # Window Cosmetic Changes
 gaps inner 10
@@ -168,5 +168,5 @@ client.unfocused #333333 #222222 #888888 #292d2e #eeeeee
 exec --no-startup-id "lxpolkit &" # start authentication agent (prompt)
 exec --no-startup-id "xcompmgr &" # startup composition manager (transparency)
 exec --no-startup-id "polybar" # status bar
-exec --no-startup-id "dex -a" # run autostart desktop apps
+exec --no-startup-id "$HOME/.scripts/autostart_desktop.sh &" # run autostart desktop apps
 exec --no-startup-id "emacs --daemon &" # startup emacs daemon
