--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,6 +22,7 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+f exec "firefox-bin"
 bindsym $mod+Shift+e exec "emacsclient -c"
+bindsym $mod+Shift+d exec "discord"
 
 # kill focused window
 bindsym $mod+q kill
