--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,7 +20,7 @@ floating_modifier $mod
 
 # Application hot keys
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Shift+f exec "firefox-bin"
+bindsym $mod+Shift+f exec "microsoft-edge-stable"
 bindsym $mod+Shift+e exec "emacsclient -c"
 bindsym $mod+Shift+d exec "discord"
 
