--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,10 +3,9 @@ set $mod Mod4
 # Set font
 font pango:monospace 8
 
-# Init i3 lock and enable autolock
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-exec --no-startup-id xset dpms 600
-exec --no-startup-id xautolock -time 10 -locker i3lock
+# Configure betterlockscreen
+exec --no-startup-id "betterlockscreen -l dim -u $HOME/Pictures"
+bindsym $mod+Shift+x exec "betterlockscreen -l dim -w"
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -37,23 +36,11 @@ bindsym $mod+k focus up
 bindsym $mod+j focus down
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+semicolon split h
@@ -155,11 +142,11 @@ bindsym l resize shrink width 10 px or 10 ppt
 bindsym $mod+r mode "resize"
 
 # Brightness keys setup
-bindsym XF86MonBrightnessDown exec --no-startup-id "sudo $HOME/.scripts/brightness.sh -5"
-bindsym XF86MonBrightnessUp exec --no-startup-id "sudo $HOME/.scripts/brightness.sh 5"
+bindsym XF86MonBrightnessDown exec --no-startup-id "doas $HOME/.scripts/brightness.sh -5"
+bindsym XF86MonBrightnessUp exec --no-startup-id "doas $HOME/.scripts/brightness.sh 5"
 
 # Window Cosmetic Changes
-gaps inner 10
+gaps inner 5
 new_window pixel 3
 client.focused #555555 #555555 #ffffff #333333 #0000ff
 client.focused_inactive #333333 #222222 #888888 #292d2e #eeeeee
