Changed font for polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -49,7 +49,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = MesloLGS NF:2
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem brightness alsa memory cpu battery network date
@@ -87,7 +87,7 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:80:...%
 
 [module/filesystem]
 type = internal/fs
@@ -137,16 +137,15 @@ format-prefix-foreground = ${colors.primary}
 format = <label> <ramp-coreload>
 label = %percentage%% - 
 
-ramp-coreload-0 = " "
-ramp-coreload-1 = ▁
-ramp-coreload-2 = ▂
-ramp-coreload-3 = ▃
-ramp-coreload-4 = ▄
-ramp-coreload-5 = ▅
-ramp-coreload-6 = ▆
-ramp-coreload-7 = ▇
-ramp-coreload-8 = █
 ramp-coreload-spacing = 0
+ramp-coreload-0 = ▁
+ramp-coreload-1 = ▂
+ramp-coreload-2 = ▃
+ramp-coreload-3 = ▄
+ramp-coreload-4 = ▅
+ramp-coreload-5 = ▆
+ramp-coreload-6 = ▇
+ramp-coreload-7 = █
 
 [module/battery]
 type = internal/battery
