Changed default date format for polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -180,7 +180,7 @@ label-connected = %{F#0000FF}%ifname%%{F-} %essid% %local_ip%
 type = internal/date
 interval = 1
 
-date = %I:%M %p
+date =  %m/%d %I:%M %p
 date-alt = %m-%d-%Y %I:%M:%S %p
 
 label = %date%
@@ -189,5 +189,3 @@ label-foreground = ${colors.primary}
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
