--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,21 +1,3 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
-
 [colors]
 background = #EEEEEE
 background-alt = #A0A0A0
@@ -52,7 +34,7 @@ separator-foreground = ${colors.disabled}
 font-0 = MesloLGS NF:2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem brightness alsa memory cpu battery network date
+modules-right = filesystem brightness pulseaudio memory cpu battery network date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -100,8 +82,8 @@ label-mounted = %{F#0000FF}%mountpoint%%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
-[module/alsa]
-type = internal/alsa
+[module/pulseaudio]
+type = internal/pulseaudio
 
 format-volume-prefix = "VOL "
 format-volume-prefix-foreground = ${colors.primary}
