Updated email config to allow for better organization in mu4e

--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -19,6 +19,6 @@ Inbox ~/.mail/Inbox
 Channel gmail
 Far :gmail-remote:
 Near :gmail-local:
-Patterns * ![Gmail]* "[Gmail]/Sent Mail" "[Gmail]/Starred" "[Gmail]/All Mail" "[Gmail]/Trash"
+Patterns * ![Gmail]*
 Create Both
 SyncState *
