--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -15,7 +15,7 @@ floating_modifier $mod
 
 # Application hot keys
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Shift+f exec "microsoft-edge-stable"
+bindsym $mod+Shift+f exec "google-chrome-stable"
 bindsym $mod+Shift+e exec "emacsclient -c"
 bindsym $mod+Shift+d exec "discord"
 
