--- a/dotfiles/.config/polybar/config.ini
+++ b/dotfiles/.config/polybar/config.ini
@@ -34,7 +34,7 @@ separator-foreground = ${colors.disabled}
 font-0 = MesloLGS NF:2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem brightness pulseaudio memory cpu battery network date
+modules-right = filesystem pulseaudio memory cpu battery network date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -94,16 +94,6 @@ label-volume = %percentage%%
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
-[module/brightness]
-type = internal/backlight
-card = intel_backlight
-
-format-prefix = "BRI "
-format-prefix-foreground = ${colors.primary}
-format = <label>
-
-label = %percentage%%
-
 [module/memory]
 type = internal/memory
 interval = 2
@@ -162,8 +152,8 @@ label-connected = %{F#0000FF}%ifname%%{F-} %essid% %local_ip%
 type = internal/date
 interval = 1
 
-date =  %m/%d %I:%M %p
-date-alt = %m-%d-%Y %I:%M:%S %p
+date =   %a %d %I:%M %p
+date-alt = %a %b %d %Y %I:%M:%S %p
 
 label = %date%
 label-foreground = ${colors.primary}
