--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -14,7 +14,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # Application hot keys
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec "alacritty"
 bindsym $mod+Shift+f exec "google-chrome-stable"
 bindsym $mod+Shift+e exec "emacsclient -c"
 bindsym $mod+Shift+d exec "discord"
