--- a/dotfiles/.aerospace.toml
+++ b/dotfiles/.aerospace.toml
@@ -88,9 +88,9 @@ cmd-shift-c = 'reload-config'
 cmd-r = 'mode resize'
 
 [mode.resize.binding]
-h = 'resize width -50'
-j = 'resize height +50'
-k = 'resize height -50'
-l = 'resize width +50'
+h = 'resize width +50'
+j = 'resize height -50'
+k = 'resize height +50'
+l = 'resize width -50'
 enter = 'mode main'
 esc = 'mode main'
