--- a/dotfiles/.aerospace.toml
+++ b/dotfiles/.aerospace.toml
@@ -29,8 +29,8 @@ outer.right = 5
 
 [mode.main.binding]
 # See: https://nikitabobko.github.io/AeroSpace/goodness#open-a-new-window-with-applescript
-cmd-enter = '''exec-and-forget osascript -e 'tell application "iTerm2" to create window with default profile''''
-cmd-shift-e = 'exec-and-forget emacs'
+cmd-enter = 'exec-and-forget open -n -a "Ghostty"'
+cmd-shift-e = 'exec-and-forget /etc/profiles/per-user/*/bin/emacs'
 cmd-shift-f = 'exec-and-forget open -n -a "Google Chrome"'
 cmd-shift-d = 'exec-and-forget open -n -a "Discord"'
 
