--- a/dotfiles/.mbsyncrc
+++ b/dotfiles/.mbsyncrc
@@ -1,9 +1,9 @@
 IMAPAccount gmail
 Host imap.gmail.com
 User jadenprovost@gmail.com
-PassCmd "bw --session $(cat $HOME/.bw_session) --nointeraction get password 'Emacs Gmail'"
-SSLType IMAPS
-SSLVersions TLSv1.2
+PassCmd "PATH=/opt/homebrew/bin:$PATH bw --session $(cat $HOME/.bw_session) --nointeraction get password 'Emacs Gmail'"
+TLSType IMAPS
+TLSVersions +1.2
 AuthMechs PLAIN
 SystemCertificates no
 CertificateFile /etc/ssl/certs/ca-certificates.crt
