--- a/dotfiles/.config/polybar/config.ini
+++ b/dotfiles/.config/polybar/config.ini
@@ -8,7 +8,6 @@ alert = #A54242
 disabled = #707880
 
 [bar/example]
-monitor = ${env:MONITOR}
 width = 100%
 height = 24pt
 radius = 6
@@ -34,14 +33,12 @@ separator-foreground = ${colors.disabled}
 font-0 = MesloLGS NF:2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio memory cpu battery network date
+modules-right = filesystem pulseaudio memory cpu battery network date tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -157,6 +154,11 @@ date-alt = %a %b %d %Y %I:%M:%S %p
 
 label = %date%
 label-foreground = ${colors.primary}
+
+[module/tray]
+type = internal/tray
+format-margin = 8px
+tray-spacing = 8px
 
 [settings]
 screenchange-reload = true
